Mail is connected

--- a/prepros.config
+++ b/prepros.config
@@ -3,9 +3,9 @@
   "about": "This is a Prepros (https://prepros.io) configuration file. You can commit this file to a git repo to backup and sync project configurations.",
   "config": {
     "proxy": {
-      "enable": false,
-      "target": "",
-      "useLocalAssets": false
+      "enable": true,
+      "target": "http://mudrova",
+      "useLocalAssets": true
     },
     "reload": {
       "enable": true,
@@ -882,6 +882,12 @@
     },
     "files": [
       {
+        "file": "_app/404.pug",
+        "config": {
+          "customOutput": "404/index.php"
+        }
+      },
+      {
         "file": "_app/_js/libs.js",
         "config": {
           "autoCompile": true,
@@ -912,6 +918,12 @@
         }
       },
       {
+        "file": "_app/error.pug",
+        "config": {
+          "customOutput": "error/index.php"
+        }
+      },
+      {
         "file": "_app/index.pug",
         "config": {
           "customOutput": "index.html"
@@ -921,6 +933,12 @@
         "file": "_app/styl/styles.min.styl",
         "config": {
           "customOutput": "css/styles.css"
+        }
+      },
+      {
+        "file": "_app/thanks.pug",
+        "config": {
+          "customOutput": "thanks/index.php"
         }
       },
       {
