Mail send is done

--- a/prepros.config
+++ b/prepros.config
@@ -75,13 +75,259 @@
       }
     },
     "uploader": {
-      "remotePath": "",
+      "remotePath": "clever/public_html",
       "timeout": 20000,
       "autoUpload": false,
       "reuseConnection": true,
       "connectionType": "ftp",
       "exportHistory": true,
-      "history": []
+      "history": [
+        {
+          "file": "favicon.ico",
+          "mtimeMs": 1719128576753.0361,
+          "date": "2024-06-24T08:38:55.884Z"
+        },
+        {
+          "file": "favicon.png",
+          "mtimeMs": 1719128467690.4788,
+          "date": "2024-06-24T08:38:56.488Z"
+        },
+        {
+          "file": "favicon.svg",
+          "mtimeMs": 1719128447159.6646,
+          "date": "2024-06-24T08:38:57.379Z"
+        },
+        {
+          "file": "index.html",
+          "mtimeMs": 1719151401898.6746,
+          "date": "2024-06-24T08:38:58.048Z"
+        },
+        {
+          "file": "send.php",
+          "mtimeMs": 1719234962642.1685,
+          "date": "2024-06-24T13:16:08.309Z"
+        },
+        {
+          "file": "404/index.php",
+          "mtimeMs": 1719152276559.9724,
+          "date": "2024-06-24T08:38:59.505Z"
+        },
+        {
+          "file": "css/styles.css",
+          "mtimeMs": 1719152077452.9817,
+          "date": "2024-06-24T08:39:56.174Z"
+        },
+        {
+          "file": "css/styles.min.css",
+          "mtimeMs": 1719152078613.5916,
+          "date": "2024-06-24T08:39:56.866Z"
+        },
+        {
+          "file": "css/styles.min.css.map",
+          "mtimeMs": 1719152078615.591,
+          "date": "2024-06-24T08:39:57.467Z"
+        },
+        {
+          "file": "docs/accounting.pdf",
+          "mtimeMs": 1718969881858.5547,
+          "date": "2024-06-24T08:39:58.345Z"
+        },
+        {
+          "file": "docs/ogrn.pdf",
+          "mtimeMs": 1719142791768.2822,
+          "date": "2024-06-24T08:39:59.397Z"
+        },
+        {
+          "file": "docs/registration.pdf",
+          "mtimeMs": 1719142550647.593,
+          "date": "2024-06-24T08:40:00.304Z"
+        },
+        {
+          "file": "docs/regulation.pdf",
+          "mtimeMs": 1719142503499.2314,
+          "date": "2024-06-24T08:40:01.707Z"
+        },
+        {
+          "file": "docs/requisites.pdf",
+          "mtimeMs": 1719142697441.8896,
+          "date": "2024-06-24T08:40:02.657Z"
+        },
+        {
+          "file": "error/index.php",
+          "mtimeMs": 1719152011240.9546,
+          "date": "2024-06-24T08:40:03.285Z"
+        },
+        {
+          "file": "fonts/GothamBold.eot",
+          "mtimeMs": 1719108730000,
+          "date": "2024-06-24T08:40:04.242Z"
+        },
+        {
+          "file": "fonts/GothamBold.svg",
+          "mtimeMs": 1719108730000,
+          "date": "2024-06-24T08:40:05.426Z"
+        },
+        {
+          "file": "fonts/GothamBold.ttf",
+          "mtimeMs": 1719108728000,
+          "date": "2024-06-24T08:40:06.192Z"
+        },
+        {
+          "file": "fonts/GothamBold.woff",
+          "mtimeMs": 1719108730000,
+          "date": "2024-06-24T08:40:06.946Z"
+        },
+        {
+          "file": "fonts/GothamBold.woff2",
+          "mtimeMs": 1719108730000,
+          "date": "2024-06-24T08:40:07.634Z"
+        },
+        {
+          "file": "fonts/GothamBook.eot",
+          "mtimeMs": 1719108646000,
+          "date": "2024-06-24T08:40:08.429Z"
+        },
+        {
+          "file": "fonts/GothamBook.svg",
+          "mtimeMs": 1719108646000,
+          "date": "2024-06-24T08:40:09.401Z"
+        },
+        {
+          "file": "fonts/GothamBook.ttf",
+          "mtimeMs": 1719108646000,
+          "date": "2024-06-24T08:40:10.392Z"
+        },
+        {
+          "file": "fonts/GothamBook.woff",
+          "mtimeMs": 1719108646000,
+          "date": "2024-06-24T08:40:11.429Z"
+        },
+        {
+          "file": "fonts/GothamBook.woff2",
+          "mtimeMs": 1719108646000,
+          "date": "2024-06-24T08:40:12.554Z"
+        },
+        {
+          "file": "fonts/Lato.eot",
+          "mtimeMs": 1719126818000,
+          "date": "2024-06-24T08:40:13.705Z"
+        },
+        {
+          "file": "fonts/Lato.svg",
+          "mtimeMs": 1719126819000,
+          "date": "2024-06-24T08:40:17.411Z"
+        },
+        {
+          "file": "fonts/Lato.ttf",
+          "mtimeMs": 1719126818000,
+          "date": "2024-06-24T08:40:19.526Z"
+        },
+        {
+          "file": "fonts/Lato.woff",
+          "mtimeMs": 1719126818000,
+          "date": "2024-06-24T08:40:21.207Z"
+        },
+        {
+          "file": "fonts/Lato.woff2",
+          "mtimeMs": 1719126821000,
+          "date": "2024-06-24T08:40:22.613Z"
+        },
+        {
+          "file": "img/logo-main.svg",
+          "mtimeMs": 1719124529909.8857,
+          "date": "2024-06-24T08:40:24.549Z"
+        },
+        {
+          "file": "img/backs/mail.png",
+          "mtimeMs": 1719143341893.6436,
+          "date": "2024-06-24T08:40:26.187Z"
+        },
+        {
+          "file": "img/backs/main.png",
+          "mtimeMs": 1719143346056.2568,
+          "date": "2024-06-24T08:40:27.737Z"
+        },
+        {
+          "file": "img/icons/icon-blue.svg",
+          "mtimeMs": 1719124631460.2744,
+          "date": "2024-06-24T08:40:28.795Z"
+        },
+        {
+          "file": "img/icons/icon-white.svg",
+          "mtimeMs": 1719131512232.5786,
+          "date": "2024-06-24T08:40:29.868Z"
+        },
+        {
+          "file": "img/icons/title-icon-blue.svg",
+          "mtimeMs": 1719144054332.2048,
+          "date": "2024-06-24T08:40:30.922Z"
+        },
+        {
+          "file": "img/icons/title-icon-grey.svg",
+          "mtimeMs": 1719124687053.3813,
+          "date": "2024-06-24T08:40:31.807Z"
+        },
+        {
+          "file": "img/icons/title-icon-white.svg",
+          "mtimeMs": 1719124660027.1887,
+          "date": "2024-06-24T08:40:32.731Z"
+        },
+        {
+          "file": "img/images/ilya.png",
+          "mtimeMs": 1719143380636.232,
+          "date": "2024-06-24T08:40:33.471Z"
+        },
+        {
+          "file": "img/images/marfa.png",
+          "mtimeMs": 1719143385354.2886,
+          "date": "2024-06-24T08:40:34.199Z"
+        },
+        {
+          "file": "img/images/qr.png",
+          "mtimeMs": 1719143374709.4358,
+          "date": "2024-06-24T08:40:34.845Z"
+        },
+        {
+          "file": "img/images/qr.svg",
+          "mtimeMs": 1719133710234.1902,
+          "date": "2024-06-24T08:40:35.643Z"
+        },
+        {
+          "file": "js/libs.js",
+          "mtimeMs": 1719126225311.6804,
+          "date": "2024-06-24T08:40:36.567Z"
+        },
+        {
+          "file": "js/libs.min.js",
+          "mtimeMs": 1719126229089.167,
+          "date": "2024-06-24T08:40:37.337Z"
+        },
+        {
+          "file": "js/libs.min.js.map",
+          "mtimeMs": 1719126229136.1375,
+          "date": "2024-06-24T08:40:38.067Z"
+        },
+        {
+          "file": "js/scripts.js",
+          "mtimeMs": 1719144963077.1653,
+          "date": "2024-06-24T08:40:38.667Z"
+        },
+        {
+          "file": "js/scripts.min.js",
+          "mtimeMs": 1719144963913.4626,
+          "date": "2024-06-24T08:40:39.241Z"
+        },
+        {
+          "file": "js/scripts.min.js.map",
+          "mtimeMs": 1719144963918.459,
+          "date": "2024-06-24T08:40:39.790Z"
+        },
+        {
+          "file": "thanks/index.php",
+          "mtimeMs": 1719151401899.6746,
+          "date": "2024-06-24T08:40:40.319Z"
+        }
+      ]
     },
     "packages": {
       "createPackageLock": true
