Main page is optimized

--- a/prepros.config
+++ b/prepros.config
@@ -99,33 +99,33 @@
         },
         {
           "file": "index.html",
-          "mtimeMs": 1719151401898.6746,
-          "date": "2024-06-24T08:38:58.048Z"
+          "mtimeMs": 1719314621365.2322,
+          "date": "2024-06-25T11:28:53.493Z"
         },
         {
           "file": "send.php",
-          "mtimeMs": 1719234962642.1685,
-          "date": "2024-06-24T13:16:08.309Z"
+          "mtimeMs": 1719235430319.5168,
+          "date": "2024-06-24T13:24:20.118Z"
         },
         {
           "file": "404/index.php",
-          "mtimeMs": 1719152276559.9724,
-          "date": "2024-06-24T08:38:59.505Z"
+          "mtimeMs": 1719313183979.118,
+          "date": "2024-06-25T10:59:56.353Z"
         },
         {
           "file": "css/styles.css",
-          "mtimeMs": 1719152077452.9817,
-          "date": "2024-06-24T08:39:56.174Z"
+          "mtimeMs": 1719315059540.799,
+          "date": "2024-06-25T11:31:09.651Z"
         },
         {
           "file": "css/styles.min.css",
-          "mtimeMs": 1719152078613.5916,
-          "date": "2024-06-24T08:39:56.866Z"
+          "mtimeMs": 1719315060972.5435,
+          "date": "2024-06-25T11:31:10.141Z"
         },
         {
           "file": "css/styles.min.css.map",
-          "mtimeMs": 1719152078615.591,
-          "date": "2024-06-24T08:39:57.467Z"
+          "mtimeMs": 1719315060975.5413,
+          "date": "2024-06-25T11:31:10.635Z"
         },
         {
           "file": "docs/accounting.pdf",
@@ -154,8 +154,8 @@
         },
         {
           "file": "error/index.php",
-          "mtimeMs": 1719152011240.9546,
-          "date": "2024-06-24T08:40:03.285Z"
+          "mtimeMs": 1719313183777.2454,
+          "date": "2024-06-25T10:59:57.076Z"
         },
         {
           "file": "fonts/GothamBold.eot",
@@ -309,23 +309,53 @@
         },
         {
           "file": "js/scripts.js",
-          "mtimeMs": 1719144963077.1653,
-          "date": "2024-06-24T08:40:38.667Z"
+          "mtimeMs": 1719292022795.8574,
+          "date": "2024-06-25T05:08:05.085Z"
         },
         {
           "file": "js/scripts.min.js",
-          "mtimeMs": 1719144963913.4626,
-          "date": "2024-06-24T08:40:39.241Z"
+          "mtimeMs": 1719292023326.4756,
+          "date": "2024-06-25T05:08:05.583Z"
         },
         {
           "file": "js/scripts.min.js.map",
-          "mtimeMs": 1719144963918.459,
-          "date": "2024-06-24T08:40:39.790Z"
+          "mtimeMs": 1719292023327.475,
+          "date": "2024-06-25T05:08:06.054Z"
         },
         {
           "file": "thanks/index.php",
-          "mtimeMs": 1719151401899.6746,
-          "date": "2024-06-24T08:40:40.319Z"
+          "mtimeMs": 1719313183978.1174,
+          "date": "2024-06-25T10:59:59.203Z"
+        },
+        {
+          "file": "img/backs/main.webp",
+          "mtimeMs": 1719312688222.9944,
+          "date": "2024-06-25T10:51:41.603Z"
+        },
+        {
+          "file": "img/images/ilya.webp",
+          "mtimeMs": 1719313129272.4521,
+          "date": "2024-06-25T10:59:57.618Z"
+        },
+        {
+          "file": "img/images/marfa.webp",
+          "mtimeMs": 1719313145513.9175,
+          "date": "2024-06-25T10:59:58.248Z"
+        },
+        {
+          "file": "img/images/qr.webp",
+          "mtimeMs": 1719313137833.3757,
+          "date": "2024-06-25T10:59:58.774Z"
+        },
+        {
+          "file": "img/backs/main-mob.png",
+          "mtimeMs": 1719314024081.3574,
+          "date": "2024-06-25T11:28:55.848Z"
+        },
+        {
+          "file": "img/backs/main-mob.webp",
+          "mtimeMs": 1719314089785.4795,
+          "date": "2024-06-25T11:28:56.488Z"
         }
       ]
     },
