--- a/prepros.config
+++ b/prepros.config
@@ -99,18 +99,18 @@
         },
         {
           "file": "index.html",
-          "mtimeMs": 1719316716288.9004,
-          "date": "2024-06-25T11:59:03.186Z"
+          "mtimeMs": 1719845213390.5552,
+          "date": "2024-07-01T14:47:00.853Z"
         },
         {
           "file": "send.php",
-          "mtimeMs": 1719235430319.5168,
-          "date": "2024-06-24T13:24:20.118Z"
+          "mtimeMs": 1719487316156.1453,
+          "date": "2024-06-27T11:22:03.252Z"
         },
         {
           "file": "404/index.php",
-          "mtimeMs": 1719316716288.9004,
-          "date": "2024-06-25T11:59:03.705Z"
+          "mtimeMs": 1719845213140.894,
+          "date": "2024-07-01T14:47:01.367Z"
         },
         {
           "file": "css/styles.css",
@@ -149,13 +149,13 @@
         },
         {
           "file": "docs/requisites.pdf",
-          "mtimeMs": 1719142697441.8896,
-          "date": "2024-06-24T08:40:02.657Z"
+          "mtimeMs": 1719845365086.1316,
+          "date": "2024-07-01T14:49:31.240Z"
         },
         {
           "file": "error/index.php",
-          "mtimeMs": 1719316715957.105,
-          "date": "2024-06-25T11:59:05.753Z"
+          "mtimeMs": 1719845213140.894,
+          "date": "2024-07-01T14:47:02.611Z"
         },
         {
           "file": "fonts/GothamBold.eot",
@@ -324,8 +324,8 @@
         },
         {
           "file": "thanks/index.php",
-          "mtimeMs": 1719316716286.901,
-          "date": "2024-06-25T11:59:06.246Z"
+          "mtimeMs": 1719845213390.5552,
+          "date": "2024-07-01T14:47:03.770Z"
         },
         {
           "file": "img/backs/main.webp",
@@ -356,6 +356,16 @@
           "file": "img/backs/main-mob.webp",
           "mtimeMs": 1719314089785.4795,
           "date": "2024-06-25T11:28:56.488Z"
+        },
+        {
+          "file": "docs/conds.pdf",
+          "mtimeMs": 1719840782757.2285,
+          "date": "2024-07-01T14:47:02.132Z"
+        },
+        {
+          "file": "img/images/qr.jpg",
+          "mtimeMs": 1719840808730.8887,
+          "date": "2024-07-01T14:47:03.290Z"
         }
       ]
     },
